--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-19.04
+    runs-on: ubuntu-20.04
 
     steps:
        - name: Init the System
@@ -15,6 +15,7 @@ jobs:
             sudo apt update && sudo apt install wget zip
             wget -qO - https://github.com/SA-17/Recovery_builder/raw/main/scripts/cleanup.sh  | bash
             sudo -E apt-get -qq update
+            sudo apt install gnupg python
             sudo -E apt-get -qq install bc build-essential tar zip curl libstdc++6 git wget python gcc clang libssl-dev repo rsync flex curl  bison aria2
             sudo curl --create-dirs -L -o /usr/local/bin/repo -O -L https://storage.googleapis.com/git-repo-downloads/repo
             sudo chmod a+rx /usr/local/bin/repo
